# Electronics-and-IoT

./: .gitignore  README.md
Connected-Clock/: README.md
Connected-Clock/components/wifi_dns_server/: CMakeLists.txt  wifi_dns_server.c
Connected-Clock/components/wifi_dns_server/include/: wifi_dns_server.h
Connected-Clock/components/wifi_http_server/: CMakeLists.txt
Connected-Clock/main/: main.c
Connected-Clock/main/include/: wifi_manager.h
Connected-Clock/main/src/: wifi_manager.c
LED_Matrix/: CMakeLists.txt  README.md
LED_Matrix/main/: CMakeLists.txt  LED_Matrix.c
RGB_Selector/: CMakeLists.txt  README.md
RGB_Selector/main/: CMakeLists.txt  rgb_selector.c
Smart-Clock/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Smart-Clock/components/LCD_display/: CMakeLists.txt  display.c
Smart-Clock/components/LCD_display/include/: display.h
Smart-Clock/components/display/: display.c
Smart-Clock/components/display/include/: display.h
Smart-Clock/components/st7789/: CMakeLists.txt  st7789.c
Smart-Clock/components/st7789/include/: st7789.h
Smart-Clock/components/wifi_captive_portal/: CMakeLists.txt  wifi_captive_portal.c
Smart-Clock/components/wifi_captive_portal/include/: wifi_captive_portal.h
Smart-Clock/components/wifi_http_server/: wifi_http_server.c
Smart-Clock/main/: CMakeLists.txt  main.c
Smart-Clock/main/assets/: WifiFont.c  WifiFont.h
Smart-Clock/main/include/: clock.h  lvgl_UI.h  nvs_storage.h  style.h  wifi_manager.h
Smart-Clock/main/src/: clock.c  lvgl_UI.c  nvs_storage.c  style.c  wifi_manager.c
(+1 files in other folders)
